Advanced SEO: fix visual glitches in SEO preview on Windows (#9294)
* Remove vertical scrollbar and add flex-grow.

Fix preview image shrinking when body is too long.

--- a/client/components/seo-preview-pane/style.scss
+++ b/client/components/seo-preview-pane/style.scss
@@ -86,7 +86,6 @@
 
 .seo-preview-pane__preview-area {
 	margin: 10px auto;
-	overflow-y: scroll;
 }
 
 .seo-preview-pane__preview {
